# toml-rs

./: .travis.yml  Cargo.toml  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
crates/test-suite/: Cargo.toml
crates/test-suite/benches/: linear.rs
crates/test-suite/tests/: datetime.rs  display.rs  invalid-misc.rs  invalid.rs  parser.rs  pretty.rs  serde.rs  spanned.rs  tables-last.rs
crates/toml/: Cargo.toml
crates/toml/src/: de.rs  lib.rs  tokens.rs
crates/toml_lexer/: Cargo.toml
crates/toml_lexer/src/: cursor.rs  lexer.rs  lib.rs  str_lit.rs
examples/: decode.rs  enum_external.rs  struct.rs  toml2json.rs
fuzz/: Cargo.toml  oss-fuzz.sh
fuzz/fuzz_targets/: fuzz_from_to_string.rs  parse.rs
implementors/core/borrow/: trait.Borrow.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js
implementors/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
implementors/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js  trait.Deserializer.js  trait.Error.js  trait.IntoDeserializer.js
implementors/serde/ser/: trait.Error.js  trait.Serialize.js  trait.Serializer.js
implementors/std/error/: trait.Error.js
serde-tests/: Cargo.toml  build.rs  test.rs  test.rs.in
src/: datetime.rs  de.rs  display.rs  doc.rs  lib.rs  macros.rs  map.rs  new_parser.rs  parser.rs  ser.rs  serialization.rs  show.rs  spanned.rs  spanned_value.rs  tokens.rs  toml.rs  value.rs
src/decoder/: mod.rs  rustc_serialize.rs  serde.rs
src/doc/: mod.rs  parser.rs
src/encoder/: mod.rs  rustc_serialize.rs  serde.rs
src/test/: invalid.rs  mod.rs  valid.rs
src/test/invalid/: array-mixed-types-ints-and-floats.toml
src/test/valid/: arrays-hetergeneous.json  arrays-hetergeneous.toml  arrays.toml  key-with-pound.toml  string-escapes.toml  table-whitespace.toml  unicode-escape.json  unicode-escape.toml
src/toml/: datetime.rs.html  de.rs.html  lib.rs.html  macros.rs.html  map.rs.html  ser.rs.html  spanned.rs.html  tokens.rs.html  value.rs.html
src/value/: display.rs
test-suite/: Cargo.toml  build.rs
test-suite/benches/: datetime.rs
test-suite/tests/: backcompat.rs  datetime.rs  de-errors.rs  display-tricky.rs  display.rs  float.rs  formatting.rs  invalid-misc.rs  invalid.rs  linear.rs  macros.rs  parser.rs  serde.rs  spanned-impls.rs  spanned.rs  spanned_value.rs  tables-last.rs  valid.rs
test-suite/tests/valid/: curlytable-empty-multiline.toml  curlytable-empty.toml  dotted-keys.json  dotted-keys.toml  integer.json  integer.toml
tests/: backcompat.rs  display.rs  enum_external_deserialize.rs  enum_external_serialize.rs  invalid-misc.rs  invalid.rs  map_formatting.rs  map_formtting.rs  parser.rs  pretty.rs  round_trip.rs  serde.rs  valid.rs
tests/invalid-encoder/: array-mixed-types-ints-and-floats.json
tests/valid/: arrays.json  datetime-truncate.json  example-v0.3.0.json  example-v0.3.0.toml  hard_example.toml  key-special-chars.toml  string-escapes.json  string-escapes.toml  unicode-keys.json  unicode-keys.toml
toml/: struct.Spanned.html
toml/de/: fn.from_slice.html  fn.from_str.html  struct.Deserializer.html  struct.Error.html
toml/map/: struct.Map.html
toml/ser/: enum.Error.html  fn.tables_last.html  fn.to_string.html  fn.to_string_pretty.html  fn.to_vec.html  struct.Serializer.html
toml/value/: enum.Value.html  struct.Datetime.html
