[package]
name = "toml"
version = "0.2.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["encoding"]
repository = "https://github.com/alexcrichton/toml-rs"
homepage = "https://github.com/alexcrichton/toml-rs"
documentation = "http://alexcrichton.com/toml-rs"
description = """
A native Rust encoder and decoder of TOML-formatted files and streams. Provides
implementations of the standard Encodable/Decodable traits for TOML data to
facilitate deserializing and serializing Rust structures.
"""

[dependencies]
serde = "0.9.6"

[dev-dependencies]
serde_derive = "0.9"
serde_json = "0.9"
