[package]
name = "toml"
version = "0.4.10"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["encoding"]
repository = "https://github.com/alexcrichton/toml-rs"
homepage = "https://github.com/alexcrichton/toml-rs"
documentation = "https://docs.rs/toml"
description = """
A native Rust encoder and decoder of TOML-formatted files and streams. Provides
implementations of the standard Serialize/Deserialize traits for TOML data to
facilitate deserializing and serializing Rust structures.
"""
categories = ["config", "encoding", "parser-implementations"]

[badges]
travis-ci = { repository = "alexcrichton/toml-rs" }

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
