[package]
name = "serde-tests"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"

[dependencies]
serde = "0.7"
toml = { path = "..", features = ["serde"] }

[build-dependencies]
serde_codegen = "0.7"

[lib]
name = "serde_tests"
path = "lib.rs"

[[test]]
name = "serde"
path = "test.rs"
