[package]
name = "toml"
version = "0.5.6"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md" # TODO: figure out relative paths?
keywords = ["encoding"]
repository = "https://github.com/alexcrichton/toml-rs"
homepage = "https://github.com/alexcrichton/toml-rs"
documentation = "https://docs.rs/toml"
description = """
A native Rust encoder and decoder of TOML-formatted files and streams. Provides
implementations of the standard Serialize/Deserialize traits for TOML data to
facilitate deserializing and serializing Rust structures.
"""
categories = ["config", "encoding", "parser-implementations"]
edition = "2018"

[dependencies]
serde = "1.0.97"
indexmap = { version = "1.0", optional = true }
toml_lexer = { path = "../toml_lexer" }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"

[features]
default = []

# Use indexmap rather than BTreeMap as the map type of toml::Value.
# This allows data to be read into a Value and written back to a TOML string
# while preserving the order of map keys in the input.
preserve_order = ["indexmap"]
