[package]
name = "toml_lexer"
version = "0.0.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md" # TODO: figure out relative paths?
keywords = ["encoding"]
repository = "https://github.com/alexcrichton/toml-rs"
homepage = "https://github.com/alexcrichton/toml-rs"
documentation = "https://docs.rs/toml_lexer"
description = "Low-level TOML lexer, very lightweight."
categories = ["config", "encoding", "lexer-implementations"]
edition = "2018"

[dependencies]
